--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,19 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "module": "commonjs",
+    "module": "esnext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ESNext",
+      "webworker",
+      "es2017.sharedmemory"
+    ]
   },
   "include": ["src"]
 }
